// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Target Page visualization boxes visualization boxes are shown over elements with uncommon characters in selector 1`] = `
<DocumentFragment>
  <div
    id="insights-shadow-container"
  >
    <link
      href="{{EXTENSION_URL_BASE}}/injected/styles/default/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="{{EXTENSION_URL_BASE}}/bundle/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <div
      class="insights-container insights-highlight-container insights-issues"
    >
      <div
        class="insights-highlight-box insights-highlight-outline-solid"
        style="outline-color: rgb(232, 17, 35); top: {{ENVIRONMENT_SENSITIVE_POSITION}}px; left: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-width: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-height: {{ENVIRONMENT_SENSITIVE_POSITION}}px;"
        title="Failed rules: color-contrast"
      >
        <div
          class="insights-highlight-text failure-label"
          style="background: rgb(232, 17, 35); color: rgb(255, 255, 255); width: 2em !important; cursor: pointer !important; text-align: center !important;"
        >
          !
        </div>
      </div>
      <div
        class="insights-highlight-box insights-highlight-outline-solid"
        style="outline-color: rgb(232, 17, 35); top: {{ENVIRONMENT_SENSITIVE_POSITION}}px; left: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-width: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-height: {{ENVIRONMENT_SENSITIVE_POSITION}}px;"
        title="Failed rules: color-contrast"
      >
        <div
          class="insights-highlight-text failure-label"
          style="background: rgb(232, 17, 35); color: rgb(255, 255, 255); width: 2em !important; cursor: pointer !important; text-align: center !important;"
        >
          !
        </div>
      </div>
      <div
        class="insights-highlight-box insights-highlight-outline-solid"
        style="outline-color: rgb(232, 17, 35); top: {{ENVIRONMENT_SENSITIVE_POSITION}}px; left: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-width: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-height: {{ENVIRONMENT_SENSITIVE_POSITION}}px;"
        title="Failed rules: document-title, html-has-lang"
      >
        <div
          class="insights-highlight-text failure-label"
          style="background: rgb(232, 17, 35); color: rgb(255, 255, 255); width: 2em !important; cursor: pointer !important; text-align: center !important;"
        >
          !
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Target Page visualization boxes visualization boxes are shown over nested shadow dom elements 1`] = `
<DocumentFragment>
  <div
    id="insights-shadow-container"
  >
    <link
      href="{{EXTENSION_URL_BASE}}/injected/styles/default/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="{{EXTENSION_URL_BASE}}/bundle/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <div
      class="insights-container insights-highlight-container insights-issues"
    >
      <div
        class="insights-highlight-box insights-highlight-outline-solid"
        style="outline-color: rgb(232, 17, 35); top: {{ENVIRONMENT_SENSITIVE_POSITION}}px; left: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-width: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-height: {{ENVIRONMENT_SENSITIVE_POSITION}}px;"
        title="Failed rules: color-contrast"
      >
        <div
          class="insights-highlight-text failure-label"
          style="background: rgb(232, 17, 35); color: rgb(255, 255, 255); width: 2em !important; cursor: pointer !important; text-align: center !important;"
        >
          !
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Target Page visualization boxes visualization boxes are shown over shadow dom elements 1`] = `
<DocumentFragment>
  <div
    id="insights-shadow-container"
  >
    <link
      href="{{EXTENSION_URL_BASE}}/injected/styles/default/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="{{EXTENSION_URL_BASE}}/bundle/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <div
      class="insights-container insights-highlight-container insights-issues"
    >
      <div
        class="insights-highlight-box insights-highlight-outline-solid"
        style="outline-color: rgb(232, 17, 35); top: {{ENVIRONMENT_SENSITIVE_POSITION}}px; left: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-width: {{ENVIRONMENT_SENSITIVE_POSITION}}px; min-height: {{ENVIRONMENT_SENSITIVE_POSITION}}px;"
        title="Failed rules: color-contrast"
      >
        <div
          class="insights-highlight-text failure-label"
          style="background: rgb(232, 17, 35); color: rgb(255, 255, 255); width: 2em !important; cursor: pointer !important; text-align: center !important;"
        >
          !
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
